--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -1,14 +1,4 @@
-$background-color: #28cba540;
-$text-color: #40b882;
-
-body {
-    background-color: $background-color;
-    color: $text-color;
-    font-weight: 100;
-}
-
-a[href] {
-    color: $text-color;
-    text-decoration: none;
-    text-transform: uppercase;
-}
+@import "custom.bootstrap";
+@import "fonts";
+@import "base";
+@import "layout";
