--- a/assets/styles/_custom.bootstrap.scss
+++ b/assets/styles/_custom.bootstrap.scss
@@ -2,14 +2,17 @@ $primary: #51284f !default;
 $font-family-sans-serif: "Lato", sans-serif;
 $body-bg: #FFFFFF;
 
-// Required
-@import "../../node_modules/bootstrap/scss/functions";
-@import "../../node_modules/bootstrap/scss/variables";
-@import "../../node_modules/bootstrap/scss/mixins";
+//// Required
+//@import "../../node_modules/bootstrap/scss/functions";
+//@import "../../node_modules/bootstrap/scss/variables";
+//@import "../../node_modules/bootstrap/scss/mixins";
+//
+//// Optional
+//@import "../../node_modules/bootstrap/scss/reboot";
+//@import "../../node_modules/bootstrap/scss/grid";
+//@import "../../node_modules/bootstrap/scss/buttons";
+//@import "../../node_modules/bootstrap/scss/carousel";
+//@import "../../node_modules/bootstrap/scss/utilities";
 
-// Optional
-@import "../../node_modules/bootstrap/scss/reboot";
-@import "../../node_modules/bootstrap/scss/grid";
-@import "../../node_modules/bootstrap/scss/buttons";
-@import "../../node_modules/bootstrap/scss/carousel";
-@import "../../node_modules/bootstrap/scss/utilities";
+@import '~bootstrap/scss/bootstrap';
+@import '~bootstrap-vue/src/index';
