--- a/assets/styles/_fonts.scss
+++ b/assets/styles/_fonts.scss
@@ -1,19 +1,45 @@
 @font-face {
-  font-family: "Lato";
-  src: url("~assets/fonts/Lato-Regular.ttf") format("truetype");
-  font-weight: normal;
-  font-style: normal;
+    font-family: 'Lato';
+    src: url('~assets/fonts/Lato-Regular.ttf') format('truetype'),
+        url('~assets/fonts/Lato-Regular.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
 }
 @font-face {
-  font-family: "Lato";
-
-  src: url("~assets/fonts/Lato-Bold.ttf") format("truetype");
-  font-weight: bold;
-  font-style: normal;
+    font-family: 'Lato';
+    src: url('~assets/fonts/Lato-Bold.ttf') format('truetype'),
+        url('~assets/fonts/Lato-Bold.woff') format('woff');
+    font-weight: bold;
+    font-style: normal;
 }
 @font-face {
-  font-family: "Lato";
-  src: url("~assets/fonts/Lato-Light.ttf") format("truetype");
-  font-weight: 300;
-  font-style: normal;
+    font-family: 'Lato';
+    src: url('~assets/fonts/Lato-Light.ttf') format('truetype'),
+        url('~assets/fonts/Lato-Light.woff') format('woff');
+    font-weight: 300;
+    font-style: normal;
+}
+@font-face {
+    font-family: 'Open Sans';
+    src: url('~assets/fonts/OpenSans-Regular.ttf') format('truetype'),
+        url('~assets/fonts/OpenSans-Regular.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+    font-stretch: normal;
+}
+@font-face {
+    font-family: 'Open Sans';
+    src: url('~assets/fonts/OpenSans-Bold.ttf') format('truetype'),
+        url('~assets/fonts/OpenSans-Bold.woff') format('woff');
+    font-weight: bold;
+    font-style: normal;
+    font-stretch: normal;
+}
+@font-face {
+    font-family: 'Open Sans';
+    src: url('~assets/fonts/OpenSans-Light.ttf') format('truetype'),
+        url('~assets/fonts/OpenSans-Light.woff') format('woff');
+    font-weight: 300;
+    font-style: normal;
+    font-stretch: normal;
 }
